[package]
name = "demo"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.2.4"
once_cell = "1.7.2"
crossbeam = "0.8.0"
rayon = "1.5.0"
